--- a/SpringBoot_MongoDB/pom.xml
+++ b/SpringBoot_MongoDB/pom.xml
@@ -68,7 +68,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>mongoDb_Service</finalName>
+		<finalName>mongoDb_service</finalName>
 	</build>
 
 </project>
