--- a/SpringBoot_MongoDB/DockerFile
+++ b/SpringBoot_MongoDB/DockerFile
@@ -1,4 +1,4 @@
 FROM openjdk
-ADD target/mongoDb_service.jar mongoDb_service.jar
+ADD target/mongodb_service.jar mongodb_service.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/mongoDb_service.jar"]
+ENTRYPOINT ["java", "-jar", "/mongodb_service.jar"]
