--- a/SpringBoot_MongoDB/pom.xml
+++ b/SpringBoot_MongoDB/pom.xml
@@ -36,6 +36,12 @@
 			<version>2.0.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.10.0.2594</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
