--- a/SpringBoot_MongoDB/src/main/resources/application.properties
+++ b/SpringBoot_MongoDB/src/main/resources/application.properties
@@ -12,3 +12,8 @@ management.tracing.sampling.probability=1.0
 management.endpoint.health.show-details=always
 
 server.port=8099
+
+#sonarqube properties
+sonar.projectKey=SpringBoot_MongoDB
+sonar.projectName=SpringBoot_MongoDB
+sonar.host.url=http://localhost:9000
